# GraphicalPasswordAuthentication

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml  replit.nix
templates/: home.html  login.html  signup.html
